apigateway-consul.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: apigateway-consul
 annotations:
   getambassador.io/config: |
     ---
     apiVersion: ambassador/v1
     kind: Mapping
     name: apigateway_consul
     prefix: /
     service: apigateway
     resolver: consul-dc1
     load_balancer:
       policy: round_robin
spec:
 ports:
 - name: http
   port: 80
