akililab-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: akililab-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: akililab
spec:
  hosts:
  - "*"
  gateways:
  - akililab-gateway
  http:
  - match:
    - uri:
        prefix: /v1/balance
    route:
    - destination:
        host: akililab-api-gateway
        port:
          number: 8080
